src/objects/Application__c.object
<CustomObject>
    <description>This object will hold all Application records.</description>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Number_Delinquent__c</fullName>
        <inlineHelpText>Enter the account number for any delinquent accounts, loans, payments, etc.</inlineHelpText>
        <label>Account Number (Delinquent)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Chapter_7_13__c</fullName>
        <label>Active Chapter 7/13</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Collateral__c</fullName>
        <label>Active Collateral Available</label>
        <summaryFilterItems>
            <field>Property__c.Active_Collateral__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Property__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Address_Match_Eligilibity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compare IRS address to CBR address</description>
        <label>Address Match Eligilibity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Location_Deliquent__c</fullName>
        <inlineHelpText>Enter the location of Agency for which applicant is delinquent</inlineHelpText>
        <label>Agency Location (Deliquent)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name_Delinquent__c</fullName>
        <inlineHelpText>Enter name of agency for which applicant is deliquent</inlineHelpText>
        <label>Agency Name (Delinquent)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_to_Terms__c</fullName>
        <inlineHelpText>Applicant signed and agreed to terms listed in question 12, 13, 14, 15, 16 of the loan application</inlineHelpText>
        <label>Agree to Terms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allowable_MAFD__c</fullName>
        <formula>Gross_Monthly_Income2__c  *  MAFD_Thresholds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard MAFD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Processing_Contact_Phone__c</fullName>
        <label>App. Processing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>App_Processing_Contact__c</fullName>
        <description>Contact for processing the application.</description>
        <inlineHelpText>Contact for processing the application.</inlineHelpText>
        <label>App. Processing Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Processing_Variables__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Processing Variables</label>
        <referenceTo>App_Processing_Variables__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Acknowledgment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Acknowledgment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Does_Not_Have_Credit_Elsewhere__c</fullName>
        <label>Applicant Does Not Have Credit Elsewhere</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_File_Age__c</fullName>
        <formula>TODAY() - Acceptance_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application File Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <label>Application Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconsideration</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Real_Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business_Contents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic_Injury_EIDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military_Reservist_Economic_Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approval_Assigned_To__c</fullName>
        <label>Approval Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Legal Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Attorney</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_For_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved For Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filed used to assign records to different users</description>
        <inlineHelpText>Filed used to assign records to different users</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Queue__c</fullName>
        <description>Time stamp field to indicate when a record was assigned to any given queue</description>
        <inlineHelpText>Time stamp field to indicate when a record was assigned to any given queue</inlineHelpText>
        <label>Assigned to Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Automated_Interface_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Interface Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Details__c</fullName>
        <inlineHelpText>Enter details such as dates, parties involved, and current status</inlineHelpText>
        <label>Bankruptcy Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <inlineHelpText>I have never been bankrupt, except:</inlineHelpText>
        <label>Bankruptcy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications (Original Application)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBRA_or_OPA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Negative response is desirable.  Property is not a CBRA or OPA</description>
        <label>CBRA or OPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBR_Pull__c</fullName>
        <formula>IF(  NOT( ISBLANK( Credit_Score__c ) )  || Credit_Score__c = 999, &quot;Null&quot;,&quot; &quot;)</formula>
        <label>CBR Pull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CET_Net_Available_Worth__c</fullName>
        <formula>Total_Net_Worth__c - App_Processing_Variables__r.Standard_Exclusion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CET Net Available Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a companion loan application, i.e., applicant is applying for more than one loan</description>
        <label>Companion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condo_HOA_fee_not_listed_on_applicatio__c</fullName>
        <description>This field is one of the criteria for Miscellaneous Exception Test</description>
        <label>Condo/HOA fee not listed on Application</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <summarizedField>Processing_Application_Review__c.Total_Contents_Uncompensated_Loss__c</summarizedField>
        <summaryForeignKey>Processing_Application_Review__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Elsewhere_Test__c</fullName>
        <description>Field used to pull the appropriate interest rate to the application. Field used in workflows. Not needed on page layout.</description>
        <label>Credit Elsewhere Test</label>
        <picklist>
            <picklistValues>
                <fullName>Market Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Market Rate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Repayment_Test_Result_Date__c</fullName>
        <description>Date in which the Credit/Payment Test Results were completed</description>
        <inlineHelpText>Date in which the Credit/Payment Test Results were completed</inlineHelpText>
        <label>Credit/Repayment Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Repayment_Test_Status__c</fullName>
        <description>Field indicates if the Applicant(s) passed or failed the initial Credit / Repayment Test</description>
        <inlineHelpText>Field indicates if the Applicant(s) passed or failed the initial Credit / Repayment Test</inlineHelpText>
        <label>Credit / Repayment Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Type__c</fullName>
        <label>Damaged Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Assigned__c</fullName>
        <formula>DATEVALUE(NOW()) - Original_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Queue__c</fullName>
        <formula>NOW()-Assigned_to_Queue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decl_Type__c</fullName>
        <formula>Text(Disaster_Declaration__r.Disaster_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decl Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Reason_Code__c</fullName>
        <description>This field will store the Decline Reason code based on the Application Status</description>
        <label>Decline Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquencies__c</fullName>
        <inlineHelpText>I am not delinquent on any Federal taxes, direct or guaranteed loans (FHA, VA, student, etc.) contracts, grants, or child support payments, except:</inlineHelpText>
        <label>Delinquencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Application record to the corresponding Disaster Declaration</description>
        <inlineHelpText>Associates the Application record to the corresponding Disaster Declaration</inlineHelpText>
        <label>Disaster Declaration</label>
        <referenceTo>Disaster__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disaster_Number__c</fullName>
        <formula>Disaster_Declaration__r.Physical_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disaster Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Reason__c</fullName>
        <description>Reason for the selected Final Approval Authority</description>
        <inlineHelpText>Reason for the selected Final Approval Authority</inlineHelpText>
        <label>Display Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drafting_Attorney__c</fullName>
        <label>Drafting Attorney</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIDL_Filing_Deadline__c</fullName>
        <label>EIDL Filing Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELA_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populate with “Y” if app CHANNEL_CD_ODA = ELA.  Populate with “N” if CHANNEL_CD_ODA &lt;&gt; ELA.</description>
        <label>ELA Application?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Injury_Declaration_Number__c</fullName>
        <label>Economic Injury Declaration Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elements_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elements Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Loss_Equipment__c</fullName>
        <label>Est. Loss - Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Loss_Improvements__c</fullName>
        <label>Est. Loss Improvements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Loss_Inventory__c</fullName>
        <label>Est. Loss - Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Loss_Real_Estate__c</fullName>
        <label>Est. Loss - Real Estate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Payment__c</fullName>
        <formula>(( Low_Interest_Rate__c /12)* Principal_Amount__c )/(1-(1+ (Low_Interest_Rate__c /12)) ^ -360)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_Calculation__c</fullName>
        <formula>Exceeds_Standard_MAFD_Amt__c / Gross_Monthly_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard Calculation DNU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_Cash_Available__c</fullName>
        <description>Only calculated when Estimated Monthly Payment &gt; Standard Cash Available</description>
        <formula>IF (  Estimated_Monthly_Payment__c &gt;  Standard_Cash_Available__c ,  Exceeds_Standard_MAFD_Amt__c -  Monthly_Fixed_Debt__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only calculated when Estimated Monthly Payment &gt; Standard Cash Available</inlineHelpText>
        <label>Exceeds Standard Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_MAFD_Amt__c</fullName>
        <formula>Monthly_Fixed_Debt__c  +  Estimated_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard MAFD Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_MAFD_As_Number__c</fullName>
        <formula>Exceeds_Standard_MAFD__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard MAFD% As Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_MAFD__c</fullName>
        <formula>Exceeds_Standard_MAFD_Amt__c  /  Gross_Monthly_Income2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard MAFD %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Referral_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the flag that indicates if the Application has been sent as a referral to FEMA upon auto-declined</description>
        <inlineHelpText>This is the flag that indicates if the Application has been sent as a referral to FEMA upon auto-declined</inlineHelpText>
        <label>FEMA Referral Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEMA_Registration_Number__c</fullName>
        <label>FEMA Registration Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Agency_Location__c</fullName>
        <inlineHelpText>Location of Federal Agency that issued the loan</inlineHelpText>
        <label>Federal Agency Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Agency_Name__c</fullName>
        <inlineHelpText>Name of the federal agency that issued the loan</inlineHelpText>
        <label>Federal Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Loan_Account_Number__c</fullName>
        <inlineHelpText>Account / loan number of the federal loan</inlineHelpText>
        <label>Federal Loan Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <inlineHelpText>Select the date that the first payment would be made by the customer.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grants_not_listed_on_application__c</fullName>
        <description>This field is one of the criteria for Miscellaneous Exception Test</description>
        <label>Grants not listed on application</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income2__c</fullName>
        <formula>IF(RecordType.Name !=&apos;Home Loan Application&apos; || NOT( ISPICKVAL( Loan_Type__c , &apos;Home&apos;)) , null,  Gross_Annual_Income_Roll_up__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income_Roll_up__c</fullName>
        <label>Gross Annual Income- Roll up</label>
        <summarizedField>Applicant__c.Gross_Annual_Income__c</summarizedField>
        <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <formula>Gross_Monthly_Income__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Annual Income_old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income2__c</fullName>
        <formula>If(
RecordType.Name !=&apos;Home Loan Application&apos;,null, Gross_Monthly_Income_rollup__c 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income__c</fullName>
        <label>Gross Monthly Income_old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income_rollup__c</fullName>
        <inlineHelpText>GMI at the household Level</inlineHelpText>
        <label>Gross Monthly Income-Roll up</label>
        <summarizedField>Applicant__c.Gross_Monthly_Income2__c</summarizedField>
        <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Delinquencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Delinquencies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Higher_Legal_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box indicates that a higher legal review is required to approve the application, set manually by the user.</description>
        <label>Higher Legal Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Credit_Score__c</fullName>
        <description>Roll up field looks at the highest credit score of all applicants and populates this field</description>
        <label>Highest Credit Score</label>
        <summarizedField>Applicant__c.Credit_Score__c</summarizedField>
        <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IRS_Actual_Income__c</fullName>
        <description>Income provided by IRS transcript</description>
        <label>IRS Actual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRS_Transcript_s_Received__c</fullName>
        <description>This field is one of the criteria for Miscellaneous Exception Test</description>
        <inlineHelpText>IRS Transcript(s) Received and its not = &quot;No Record Found&quot;</inlineHelpText>
        <label>IRS Transcript(s) Received</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Term__c</fullName>
        <formula>TEXT(Low_Interest_Rate__c * 100)&amp;&quot;%&quot; 
&amp; &quot; | &quot; 
&amp;TEXT(Loan_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate | Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Property_Damaged_As_Per_40_50_Rule__c</fullName>
        <label>Is Property Damaged As Per 40/50 Rule</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Property_Eligible_for_Refinancing__c</fullName>
        <label>Is Property Eligible for Refinancing</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Judgments_Lawsuits_Details__c</fullName>
        <inlineHelpText>Please provide details such as date, parties involved, and current status:</inlineHelpText>
        <label>Judgments / Lawsuits Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LR_Company_Mailing_Address__c</fullName>
        <description>Mailing Address of Legal Representative&apos;s Company who assisted the applicant(s) to fill out the Application form</description>
        <inlineHelpText>Mailing Address of Legal Representative&apos;s Company who assisted the applicant(s) to fill out the Application form</inlineHelpText>
        <label>LR Company Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Representative_Company_Address_Typ__c</fullName>
        <description>Address Type of the Legal Representative&apos;s Company who assisted the applicant(s) to fill out the Application form</description>
        <inlineHelpText>Address Type of the Legal Representative&apos;s Company who assisted the applicant(s) to fill out the Application form</inlineHelpText>
        <label>Company Address Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Representative_Company_Phone__c</fullName>
        <description>Phone number of Company of Legal Representative who aided the applicant(s) to fill out the Application form</description>
        <inlineHelpText>Phone number of Company of Legal Representative who aided the applicant(s) to fill out the Application form</inlineHelpText>
        <label>Legal Representative Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Legal_Representative_Company__c</fullName>
        <description>Company Name of Legal Representative who aided the applicant(s) to fill out the Application form</description>
        <inlineHelpText>Company Name of Legal Representative who aided the applicant(s) to fill out the Application form</inlineHelpText>
        <label>Legal Representative Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Representative_Fee__c</fullName>
        <description>Legal Representative&apos;s fee for assisting the applicant(s) to fill out the Application form</description>
        <inlineHelpText>Legal Representative&apos;s fee for assisting the applicant(s) to fill out the Application form</inlineHelpText>
        <label>Legal Representative Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Representative_Name__c</fullName>
        <description>Name of Legal Representative who aided the applicant(s) to fill out the Application form</description>
        <inlineHelpText>Name of Legal Representative who aided the applicant(s) to fill out the Application form</inlineHelpText>
        <label>Legal Representative Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to indicate that the Legal Review was completed. Field not visible on the page layout. Used only for approval processes on the background.</description>
        <label>Legal Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lien_Balance__c</fullName>
        <label>Lien Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Date__c</fullName>
        <inlineHelpText>Date the loan will be conceived and measure from first payment date.</inlineHelpText>
        <label>Loan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Mod_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Mod Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <defaultValue>30</defaultValue>
        <description>This field relates to the Loan Term</description>
        <inlineHelpText>Loan term is always defined in number of years e.g. 30 yrs</inlineHelpText>
        <label>Loan Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>